--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ button {
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--secondary);
+  background-color: goldenrod;
 }
 
 button:hover {
